[gd_scene load_steps=18 format=3 uid="uid://cdby66rujphi3"]

[ext_resource type="Script" uid="uid://bryby6cgtarmo" path="res://scripts/ui/main_ui.gd" id="1_script"]
[ext_resource type="PackedScene" uid="uid://dg56vg8jbsg1a" path="res://scenes/ui/shot_ui.tscn" id="2_shot_ui"]
[ext_resource type="PackedScene" uid="uid://c8j2k3l4m5n6" path="res://scenes/ui/deck_widget.tscn" id="3_deck_widget"]
[ext_resource type="Shader" uid="uid://cwotan7qgy7bh" path="res://scenes/tilt.gdshader" id="4_oi40j"]
[ext_resource type="PackedScene" uid="uid://dsma18qptjtff" path="res://scenes/WindWidget.tscn" id="4_wind"]
[ext_resource type="Texture2D" uid="uid://c6i3k5g4ohv8x" path="res://assets/kenney_fantasy-ui-borders/PNG/Default/Border/panel-border-005.png" id="5_8s2gp"]
[ext_resource type="PackedScene" uid="uid://blt23k5ne8pqf" path="res://scenes/ui/LieView.tscn" id="5_lie_view"]
[ext_resource type="Theme" uid="uid://cuubp4a7q28lw" path="res://theme/kenneyUI-green.tres" id="5_theme"]
[ext_resource type="PackedScene" uid="uid://j4r0osq52hig" path="res://scenes/ui/hole_viewer.tscn" id="6_hole_viewer"]
[ext_resource type="PackedScene" uid="uid://d0p11qbqfw7jg" path="res://scenes/ui/SwingMeter.tscn" id="7_swing_meter"]
[ext_resource type="Texture2D" uid="uid://c3hpaioup7fto" path="res://textures/icons/click.png" id="12_ampf0"]
[ext_resource type="Texture2D" uid="uid://bug18inwfvt57" path="res://textures/icons/left-click.png" id="13_chv3i"]
[ext_resource type="Texture2D" uid="uid://meco8curw6dv" path="res://textures/icons/right-click.png" id="14_h2n7m"]
[ext_resource type="Texture2D" uid="uid://qi0wkwo6234h" path="res://textures/icons/scroll.png" id="15_xfu30"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_aa6wj"]
shader = ExtResource("4_oi40j")
shader_parameter/limit = 0.2410000114475
shader_parameter/blur = 2.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ampf0"]
texture = ExtResource("5_8s2gp")
texture_margin_left = 15.0
texture_margin_top = 15.0
texture_margin_right = 15.0
texture_margin_bottom = 15.0
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lieinfo"]
content_margin_left = 12.0
content_margin_top = 8.0
content_margin_right = 12.0
content_margin_bottom = 8.0
bg_color = Color(0.1, 0.12, 0.18, 0.92)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.45, 0.6, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="MainUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("5_theme")
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.08, 0.1, 0.12, 1)

[node name="HoleViewer" parent="." instance=ExtResource("6_hole_viewer")]
layout_mode = 1
min_zoom = 20.0
max_zoom = 100.0

[node name="tiltshift" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_aa6wj")
layout_mode = 0
offset_right = 800.0
offset_bottom = 1080.0

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 801.0
offset_bottom = 1081.0
theme_override_styles/panel = SubResource("StyleBoxTexture_ampf0")

[node name="icons" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Click" type="Sprite2D" parent="icons"]
position = Vector2(208, 996)
scale = Vector2(0.125, 0.12500003)
texture = ExtResource("12_ampf0")

[node name="LeftClick" type="Sprite2D" parent="icons"]
position = Vector2(332, 994)
scale = Vector2(0.12500001, 0.1328125)
texture = ExtResource("13_chv3i")

[node name="RightClick" type="Sprite2D" parent="icons"]
position = Vector2(464, 994)
scale = Vector2(0.124999955, 0.13281243)
texture = ExtResource("14_h2n7m")

[node name="Scroll" type="Sprite2D" parent="icons"]
position = Vector2(592, 994)
scale = Vector2(0.12499999, 0.13281249)
texture = ExtResource("15_xfu30")

[node name="Label" type="Label" parent="icons"]
layout_mode = 0
offset_left = 168.0
offset_top = 1036.0
offset_right = 248.0
offset_bottom = 1056.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Rotate"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="icons"]
layout_mode = 0
offset_left = 304.0
offset_top = 1036.0
offset_right = 368.0
offset_bottom = 1056.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Aim"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="icons"]
layout_mode = 0
offset_left = 432.0
offset_top = 1036.0
offset_right = 496.0
offset_bottom = 1056.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Pan"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="icons"]
layout_mode = 0
offset_left = 560.0
offset_top = 1036.0
offset_right = 624.0
offset_bottom = 1056.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Zoom"
horizontal_alignment = 1

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.02962963
anchor_bottom = 0.02962963
offset_left = 1102.0
offset_top = 488.0
offset_right = 1318.0
offset_bottom = 519.0
text = "1. Choose a swing card"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.15520833
anchor_top = 0.02962963
anchor_right = 0.15520833
anchor_bottom = 0.02962963
offset_left = 1102.0
offset_top = 488.0
offset_right = 1318.0
offset_bottom = 519.0
text = "1. Draw a modifier"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label3" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.078125
anchor_top = -0.060185187
anchor_right = 0.078125
anchor_bottom = -0.060185187
offset_left = 1102.0
offset_top = 488.0
offset_right = 1318.0
offset_bottom = 519.0
text = "3. Swing"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="DeckWidget" parent="." instance=ExtResource("3_deck_widget")]
layout_mode = 1
offset_left = -1118.0
offset_top = -667.0

[node name="ShotUI" parent="." instance=ExtResource("2_shot_ui")]
layout_mode = 1
mouse_filter = 2
bypass_card_selection = false

[node name="WindWidget" parent="." instance=ExtResource("4_wind")]
layout_mode = 0
offset_left = 17.0
offset_top = 16.0
offset_right = 117.0
offset_bottom = 166.0

[node name="LieView" parent="." instance=ExtResource("5_lie_view")]
layout_mode = 0
offset_left = 17.0
offset_top = 194.0
offset_right = 117.0
offset_bottom = 344.0

[node name="LieInfoPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 1665.0
offset_top = 190.0
offset_right = 1869.0
offset_bottom = 428.0
theme_override_styles/panel = SubResource("StyleBoxFlat_lieinfo")

[node name="VBoxContainer" type="VBoxContainer" parent="LieInfoPanel"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="Title" type="Label" parent="LieInfoPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.75, 0.9, 1)
theme_override_font_sizes/font_size = 13
text = "LIE INFO"

[node name="LieName" type="Label" parent="LieInfoPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Tee Box"

[node name="LieDescription" type="RichTextLabel" parent="LieInfoPanel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 35)
layout_mode = 2
bbcode_enabled = true
text = "[i]Perfect lie on a tee.[/i]"
fit_content = true

[node name="Separator" type="HSeparator" parent="LieInfoPanel/VBoxContainer"]
layout_mode = 2

[node name="LieModifiers" type="RichTextLabel" parent="LieInfoPanel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 100)
layout_mode = 2
bbcode_enabled = true
text = "[color=white]Power: 100%[/color]
[color=white]Accuracy: 100%[/color]
[color=white]Spin: 100%[/color]
[color=white]Curve: 100%[/color]
[color=white]Roll: 100%[/color]"
fit_content = true

[node name="HoleInfoLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 1280.0
offset_top = 230.0
offset_right = 1560.0
offset_bottom = 310.0
theme_override_font_sizes/font_size = 24
text = "Hole Info"

[node name="GenerateButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -234.0
offset_top = 226.0
offset_right = -28.675903
offset_bottom = 270.251
grow_horizontal = 0
text = "Generate New Hole"

[node name="SwingMeter" parent="." instance=ExtResource("7_swing_meter")]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.1390625
anchor_top = 0.43796295
anchor_right = 1.1390625
anchor_bottom = 0.43796295
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true
